# rust-rabbitmq-test

./: Cargo.toml  Makefile  README.md  receiver.py  sender.py  test.txt
src/: callback_function.rs  consumer.rs  main.rs  publisher.rs
