[package]
name = "rabbit_mq_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitmq-stream-client = "0.1.0"
futures = "0.3.25"
tokio = "1.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.23"
