[package]
name = "rabbit_mq_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
futures-lite = "1.12.0"
tokio = {version = "1.21.2", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-global-executor = "2.3.1"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
