[package]
name = "rabbit_mq_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
futures-lite = "1.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-global-executor = "2.3.1"
serde = "1.0.147"
serde_json = "1.0.87"
